--- a/x-back/src/main/webapp/resources/metismenu/demo.css
+++ b/x-back/src/main/webapp/resources/metismenu/demo.css
@@ -1,4 +1,4 @@
-.sidebar {
+/* .sidebar {
   display: block;
   float: left;
   width: 250px;
@@ -8,12 +8,13 @@
   display: block;
   overflow: hidden;
   width: auto;
-}
+} */
 
 .sidebar-nav {
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
   background-image: -webkit-linear-gradient(left, color-stop(#333333 10px), color-stop(#222222 10px));
-  background-image: linear-gradient(to right, #333333 10px, #222222 10px);
+ /*  background-image: linear-gradient(to right, #333333 10px, #222222 10px); */
+  background-image: linear-gradient(to right, #444444 10px, #2f3440 10px);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff333333', endColorstr='#ff222222', GradientType=1);
 }
@@ -34,10 +35,10 @@
 }
 .sidebar-nav ul a {
   padding: 10px 20px;
-  color: #aaa;
+  color: #c1c4cb;
   border-top: 1px solid rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.05) inset;
-  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.5);
+  /* box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.05) inset; */
+  /* text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.5); */
 }
 .sidebar-nav ul a:hover,
 .sidebar-nav ul a:focus,
@@ -57,12 +58,12 @@
 
 .sidebar-nav ul ul ul a {
   padding: 10px 40px;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.3);
 }
 .sidebar-nav ul ul ul a:hover,
 .sidebar-nav ul ul ul a:focus,
 .sidebar-nav ul ul ul a:active {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
 .sidebar-nav-item {
